<resources>
    <string name="app_name">Asteroid Radar</string>
    <string name="label_close_date">Close approach date</string>
    <string name="label_absolute_magnitude">Absolute magnitude</string>
    <string name="label_estimated_diameter">Estimated diameter</string>
    <string name="label_relative_velocity">Relative velocity</string>
    <string name="label_distance_from_earth">Distance from earth</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="about_magnitude_text">more about absolute magnitude</string>
    <string name="about_magnitude_help_text">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometers (93 million miles)</string>
    <string name="hazardous_descr">is asteroid hazardous</string>
    <string name="day_image_content_descr">picture of day</string>
    <string name="error_connect_text">Cannot connect to server</string>
    <string name="reconnect_btn_text">reconnect</string>
    <string name="is_hazardous_content_descr">image describe if asteroid is hazardous</string>
    <string name="show_today_text">Show todays asteroids</string>
    <string name="show_all_text">Show asteroids for the week</string>
</resources>